2008-02-09  Nestor Salceda  <nestor.salceda@gmail.com>
	
	* Makefile.am: Added tasks for API documentation generation.  One for
	generating documentation and other for assembling the documentation for
	distrubution puroposes.

2008-02-06  Sebastien Pouliot  <sebastien@ximian.com>

	* AUTHORS: Welcome new Gendarme hackers: Seo Sanghyeon and
	Scott Peterson

2008-02-01  Andrew Jorgensen  <ajorgensen@novell.com>

	* Makefile.am: Fixes to import gendarme into mono-tools
	and a good amount of autotools love as well

2008-01-31  Sebastien Pouliot  <sebastien@ximian.com>

	* NEWS: Ready for 0.0.5

2008-01-13  Sebastien Pouliot  <sebastien@ximian.com>

	* Makefile.am: Run framework tests on "make run-test" and ignore
	non-Gendarme assemblies on "make self-test".

2007-12-30  Sebastien Pouliot  <sebastien@ximian.com>

	* configure.ac: Add Gendarme.Rules.Interoperability

2007-12-20  Sebastien Pouliot  <sebastien@ximian.com>

	* NEWS: Finally 0.0.4 :)

2007-11-29  Sebastien Pouliot  <sebastien@ximian.com>

	* Makefile.am: Change self-test to use the self-test set of rules
	instead of the default one.

2007-10-07  Sebastien Pouliot  <sebastien@ximian.com>

	* AUTHORS: Add the GSoC 2007 crew!
	* configure.ac: Add new assemblies. Bump version number for (soon to
	be ready) next version.
	* gendarme.mds: Update MonoDevelop solution.

2007-09-14  Nestor Salceda  <nestor.salceda@gmail.com>

	* configure.ad: Add Gendarme.Rules.Smells to the build.

2007-09-13  Nestor Salceda  <nestor.salceda@gmail.com>

	* configure.ac: Add Gendarme.Rules.Naming to the build.

2007-08-31  Nestor Salceda  <nestor.salceda@gmail.com>
	
	* configure.ac: Install Gendarme.Framework to be reusable (pkg-config)
	with other runners.

2006-11-08  Sebastien Pouliot  <sebastien@ximian.com>

	* gendarme.sln: Update solution file for VS.NET

2006-11-06  Sebastien Pouliot  <sebastien@ximian.com> 

	* configure.ac: Add Gendarme.Rules.Ui to the build and bump version